# proiect-ml-JustDragos

./: Documentation.ipynb  main.py  pyproject.toml  streamlit_app.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
comparison_programs/: AOC_and_CM_Run.py  Run_And_Compare_Classifier_Models.py  adjust_hyper_parameters.py  learning_curves.py  run_and_compare_regression_models.py  run_shap_analysis.py  save_models.py  tune_top5.py
data_handling/: Data_Of_Best_N_ETFs.py
models/: general_model.py
models/classifier_models/: catboost_model_classifier.py  classifer_model.py  decision_tree_classifier.py  explainable_boosting_classifier.py  knn_classifier.py  logistic_regression_classifier.py  naive_bayes_classifier.py  random_forest_classifier.py  svm_classifier.py  xgboost_classifier.py
models/regression_models/: catboost_regressor.py  decision_tree_regressor.py  ebm_regressor.py  gaussian_process_regressor.py  knn_regressor.py  linear_regression.py  random_forest_regressor.py  regression_model.py  svr_regressor.py  xgboost_regressor.py
