[project]
name = "proiect-ml-justdragos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "interpret>=0.7.8",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pip>=26.1",
    "scikit-learn>=1.8.0",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
